--- a/org/1_practice.org
+++ b/org/1_practice.org
@@ -9,22 +9,21 @@
   - Upload the completed file as a class assignment
 
   #+name: tab:3_practice
-  | PRACTICE         | MIN |
-  |------------------+-----|
-  | Prerequisites    |  15 |
-  | Loading packages |  15 |
-  | Looking at data  |  15 |
-  | Factors vectors  |  15 |
-  | Summary stats    |  15 |
-  | Boxplots         |  10 |
-  | Scatterplots     |  10 |
-  | Bar charts       |  10 |
-  | Customization    |  15 |
-  |------------------+-----|
-  | TOTAL            | 120 |
-  #+TBLFM: @11$2=vsum(@2..@10)
+  | PRACTICE                   | MIN |
+  |----------------------------+-----|
+  | Identify yourself          |   5 |
+  | Find GitHub repos          |  10 |
+  | Open the terminal          |   5 |
+  | Open/close R from terminal |  10 |
+  | Emacs tutorial             |  60 |
+  | Open/close R in Emacs      |  15 |
+  | Run R in Org-mode file     |  15 |
+  | Close Emacs/terminal       |   5 |
+  |----------------------------+-----|
+  | TOTAL                      | 105 |
+  #+TBLFM: @10$2=vsum(@5..@9)
 
-* TODO IDENTIFY YOURSELF
+* TODO Identify yourself
 
   - Update the ~#+AUTHOR:~ information in the header
   - Add this on a line to the header of this file :
@@ -34,59 +33,97 @@
     until you see ~DONE~ instead of ~TODO~ next to the title.
   - Perform this last step each time you complete a section.
 
-* TODO PREREQUISITES
+* TODO Find the GitHub repos
 
-  1) Check that R is installed on your machine. All of these are
-     equivalent but lead to different interfaces:
-     - open Emacs and open an R session with ~M-x R~
-     - open the CMD line terminal and enter the command ~R~
-     - open the CMD line terminal and enter the command ~Rgui~
+  1) Open any Web browser
+  2) Go to the URL https://github.com/birkenkrahe
+  3) Go to the ~org~ repository
+  4) Check out the file ~FAQ.org~
+  5) Find your course
+  6) Check out the sub-directories ~org~ and ~pdf~
 
-  2) Check that you can execute R code blocks inside Emacs: execute the
-     following code block named [[version]] by moving the cursor anywhere on
-     the block - either on the metadata or on the line of code - and
-     enter ~C-c C-c~.
+* TODO Open the command line terminal
 
-     The ~result~ of [[version]] is R ~version~ information. Because of the
-     output size, it is automatically wrapped in an ~example~ block.
+  1) On Windows, go to the search field and type ~CMD~
+  2) Pin the app to the Windows taskbar
+  3) On MacOS,
+  4) Open the app
 
-     #+name: version
-     #+begin_src R :results output
-       version
-     #+end_src
+* TODO Open/close R from the terminal
 
-  3) Alternatively to executing the block in the Org-mode buffer, you
-     can move the cursor on the block and enter ~C-c '~. This will open
-     the source code in a new buffer where you can execute it or edit
-     it. This time, the output will appear in the ~*R*~ buffer instead of
-     the Org-mode file.
+  1) In the terminal, after the prompt ~>~, enter the command ~R~
+  2) On the R shell, enter the command ~plot(rnorm(1000))~
+  3) A graph will appear in a separate window
+  4) On the R shell, enter the command ~head(mtcars)~
+  5) The first six lines of a data frame appear in the shell
+  6) Enter ~q()~ and confirm with ~n~ to leave the R shell
 
-  4) If R is not installed, you need to install it. If you cannot
-     execute R code blocks, you are probably missing the correct Emacs
-     init file ~/.emacs~: [[https://github.com/birkenkrahe/org/blob/master/emacs/.emacs][download the file from here]]. You might also miss
-     the ESS (Emacs Speaks Statistics) package. Try ~M-x load-library ESS
-     RET~.
+* TODO Open terminal Emacs
 
-  5) If you're in an R session now, exit by entering ~q()~. R is
-     case-sensitive, so this must be lower-case. When asked if you want
-     to save the workspace, say *no*[fn:1].
+  1) In the terminal, after the prompt, enter the command ~emacs -nw~
+  2) The GNU Emacs editor opens inside the terminal
+  3) Any time you're stuck in Emacs, type ~C-g~ to quit the command
 
-* TODO COURSE INFRASTRUCTURE
+* TODO Find and open the Emacs tutorial
 
-*Useful:* take notes! Practice leads to mastery and the practice
-exercises will often come back to haunt you in the tests.
+  1) In Emacs, enter ~C-h t~ by pressing CTRL and h followed by t
+  2) The Emacs tutorial appears on the screen
 
-1) Open a browser
-2) Find the GitHub repos (birkenkrahe/dsmath and birkenkrahe/org)
-3) Open the command line terminal
-4) Open/close R
-5) Open Emacs
-6) Find the Emacs tutorial
-7) Open/close R inside Emacs
-8) Run R in an Org-mode file
-9) Close Emacs
-10) Close the command line terminal
+* TODO @home: work through the Emacs tutorial
 
-*Note:* Class room practice completion = 10 points each for active
-participation.
+  1) Complete the tutorial by going through it line by line (ca. 60')
 
+  2) When done, insert these two lines at the top of the buffer:
+     #+begin_example
+     STUDENT: YourName [PLEDGED]
+     Time-stamp: <>
+     #+end_example
+
+  3) While visiting the buffer, insert a time stamp with the command
+     ~M-x time-stamp~. Save the file with ~C-x C-w~ as a ~.txt~ file and
+     submit it in Canvas.
+
+* TODO Open/close R in GUI Emacs
+
+  1) In the terminal Emacs, enter ~M-x R~
+  2) When prompted ~R starting project directory?~, press RET
+  3) After the ~>~ prompt in the R shell buffer, enter the command:
+     ~head(mtcars~). You should see a table in the R shell buffer.
+  4) Now enter the command ~plot(rnorm(1000))~. A separate window with a
+     graph of 1000 random points should open.
+  5) Close the R session with ~q()~. Confirm with ~n~. 
+  
+* TODO Run R in Org-mode file
+
+  1) Close the terminal Emacs with ~C-x C-c~
+  2) When prompted if you want to kill active processes, reply ~yes~
+  3) Open a Emacs GUI with the command: ~emacs~
+  4) The start screen now shows an image at the top
+  5) Create a new Org-mode file ~Rtest.org~ with ~C-x C-f~
+  6) In the file, enter the following two code blocks as shown:
+     #+attr_html: :width 400px    
+     [[./img/practice_R.png]]
+  7) Move your cursor over the first block and enter ~C-c C-c~ to execute
+     it. Then move your cursor over the second block and execute
+     it. Two ~#+Results~ appear:
+     #+attr_html: :width 400px
+     [[./img/practice_R_1.png]]
+  8) To open the link and see the plot, move your cursor over the link
+     and enter ~C-c C-o~. The plot will open in a new buffer below.
+     #+attr_html: :width 400px
+     [[./img/practice_R_2.png]]
+  9) Move your cursor back to the ~Rtest.org~ buffer with ~C-x o~, remove
+     the other buffer with ~C-x 1~ and press ~<F6>~. The graph will now be
+     shown inline. Press ~<F7>~ to make it disappear.
+     #+attr_html: :width 400px
+     [[./img/practice_R_3.png]]
+
+* TODO Close GUI Emacs
+
+  1) Close the GUI Emacs with ~C-x C-c~
+  2) When prompted if you want to save files, reply ~y~ 
+  3) When prompted if you want to kill active processes, reply ~yes~
+
+     
+    
+    
