--- a/org/2_orientation.org
+++ b/org/2_orientation.org
@@ -312,10 +312,26 @@ analysing this visualization.)
   e.g. "[[https://www-cs-faculty.stanford.edu/~knuth/things.html][Things a Computer Scientist Rarely Talks About]]", by Don Knuth.
 #+end_notes
 
+* LIKELIHOOD IS AT THE CORE OF SCIENCE
+
+Science is not about hard truths but about estimates of likelihood.
+
+#+begin_quote
+"It is scientific to say what is more likely and what is less likely,
+and not to prove all the time what is possible or impossible: from
+what I see around me, from my knowledge of the world, it is much more
+likely that the reports of flying saucers are the reports of the
+known, irrational characteristics of terrestrial intelligence rather
+than the unknown, rational efforts of extraterrestrial intelligence."
+([[https://youtu.be/EYPapE-3FRw][Richard Feynman, 1964]])
+#+end_quote
+
 * REFERENCES
 
 - Encyclopedia Britannica (2022). Quantum Mechanics - Physics. [[https://www.britannica.com/science/quantum-mechanics-physics][URL:
   britannica.com]].
+
+- Feynman on Scientific Method (Feb 18, 2011). [[https://youtu.be/EYPapE-3FRw][YouTube]].
 
 - Guardini, R (1956). The End of the Modern World - . Intercollegiate
   Studies Institute; REV ed. (April 1, 2001). ([[https://www.amazon.com/End-Modern-World-Romano-Guardini/dp/1882926587][Amazon]])
