--- a/org/3_raw_data.org
+++ b/org/3_raw_data.org
@@ -38,6 +38,11 @@ understand the fundamental concepts of statistics." (DataCamp, n.d.)
   identify trends and understand features of populations. (Davies, 2016)
   #+end_notes
 
+  #+begin_notes
+  Statistics is all about using the data from samples to draw
+  conclusions about populations. (Schmuller, 2017)
+  #+end_notes
+
 * Statistical variables
 * Numeric variables
 * Categorical variables
@@ -47,3 +52,4 @@ understand the fundamental concepts of statistics." (DataCamp, n.d.)
 
 - DataCamp (n.d.). Introduction to Statistics. URL: datacamp.com.
 - Davies TD (2016). Book of R. NoStarch Press. URL: nostarch.com
+- Schmuller J (2017) Statistical Analysis with R for Dummies. URL: wiley.com
